hidden organization visibility fix
Conflicts:
	app/views/organizations/index.html.erb

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -126,6 +126,7 @@ span.git-branch {
   padding-left: 10pt;
 }
 
+tr.hidden-organization *,
 tr.hidden-course * {
   color: gray;
   font-color: gray;
